# Python-langgraph-demo

./: .gitignore  README.md  pyproject.toml
01_ReActAgentAmapMCPServerTest/: amapMCPServer.py
02_ReActAgentHILTest/: 01_reviewCustomToolCalls.py
ai/agent/: central_data_agent.py
ai/mcp/: mcp_client_multi.py  search_server.py
ai/model/: qianwen_tool_vector_weather.py  qianwen_tool_weather.py
ai/rag/: config.py  hainan_travel_rag.py
format_parser/: query_structurer.py
interrupt_demo/: 1_resume_multiple_interrupts_with_one_invocation.py  2_approve_or_reject.py  3_review_and_edit_state.py  4_review_tool_calls.py  5_validate_human_input.py  6_debug_with_interrupts.py
langgraph_demo/: stream_mode_demo.py
llm-compiler-demo/: LLMCompiler.py  graph.py  joiner.py  main.py  planner.py  scheduler.py  settings.py  tools.py
llm-compiler-demo/config/: __init__.py
llm-compiler-demo/prompts/: __init__.py
llm-demo/agent/: agents_config.json  agents_config.py  llm_planner.py
llm-demo/mcp/: activity_detail_server.py  activity_server.py  mcp_client.py  weather_server.py
llm-demo/model/: doubao_basic.py  qianwen.py  qiwen_react.py  siliconflow_basic.py  zhipu_basic.py  zhipu_stream.py  zhipu_template.py
plan-and-execute-demo/: README.md  agent.py  graph.py  langgraph.json  plan.py  requirements.txt  settings.py
react_agent_demo/: agent_utils.py  api_server.py  etl_agent_utils.py  etl_job_store.py  metric_agent_utils.py  metric_store.py  readme.md  requirements.txt  table_agent_utils.py  table_model_store.py  test_agents.py  test_api.py
vecctor-db/: file.txt
(+12 files in other folders)
