[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "deepsearcher>=0.0.2", # rag/deepsearcher.py
    "fastmcp>=2.10.6",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-mysql>=2.0.15",
    "langgraph-checkpoint-postgres>=2.0.23", # 03_ReactAgentMemoryTest 引入
    "openai>=1.97.1",
    "psycopg[binary]>=3.2.9",   # 03_ReactAgentMemoryTest 引入
    "pymilvus>=2.5.14", # rag/deepsearcher.py
    "sentence-transformers>=5.0.0",
    "streamlit>=1.48.0",
]

[tool.uv.workspace]
members = [
    "rag",
]
